// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test item should return the create test item error state 1`] = `
Object {
  "createError": "unexpected error happened when create test item",
  "creating": false,
  "item": Array [],
}
`;

exports[`test item should return the create test item request state 1`] = `
Object {
  "createError": null,
  "creating": true,
  "item": Array [],
}
`;

exports[`test item should return the create test item success state 1`] = `
Object {
  "createError": null,
  "creating": false,
  "item": Array [
    Object {
      "columns": Array [],
      "rows": Array [
        Object {
          "dimension": "100%",
          "tabs": Array [],
          "widgets": Array [
            Object {
              "reference": "5c0f0c9ed8c7f4453f5bb51f",
              "tabIndex": 0,
              "title": "Multiple choice",
              "type": "multipleChoice",
              "widgetType": "question",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`test item should return the initial state 1`] = `
Object {
  "createError": null,
  "creating": false,
  "item": Array [],
}
`;
